<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/Theme.Transparent"
    android:background="@android:color/transparent"
    android:paddingTop="@dimen/s20dp"
    android:paddingBottom="@dimen/s10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_dialog_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/popup_frame"
        android:paddingTop="@dimen/s80dp"
         />

    <ImageView
        android:id="@+id/image_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/congratulation_banner"
       />
<TextView
    android:id="@+id/txt_dailog_title"
    style="@style/style_text_title"
    android:paddingTop="@dimen/s50dp"
    android:layout_width="match_parent"
    android:text="@string/txt_congratulation"
    android:gravity="center"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lin_success"
    android:paddingTop="@dimen/s100dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/style_txt_success_dialog_title"
        android:padding="@dimen/s5dp"
        android:text="@string/txt_your_word_match"
        android:textSize="@dimen/s18sp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/s60dp"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/s60dp">

      <!--  <TextView
            android:id="@+id/txt_word_title"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:text="Word" />-->

        <TextView
            android:id="@+id/txt_word"
            style="@style/style_txt_view"
            android:padding="@dimen/s5dp"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/s25sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/s50dp"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/s50dp"
        android:gravity="center"
        android:layout_height="wrap_content">

       <!-- <TextView
            android:id="@+id/txt_word_english_meaning_title"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:text="English Meaning "
            />
-->
        <TextView
            android:id="@+id/txt_word_english_meaning"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:textAlignment="textStart"
            android:maxLines="3"
            android:textColor="@color/color"
            android:text=" "
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/s60dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="@dimen/s60dp"
        android:layout_height="wrap_content">

      <!--  <TextView
            android:id="@+id/txt_word_marathi_meaning_title"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:text="Marathi Meaning "
            />-->

        <TextView
            android:id="@+id/txt_word_marathi_meaning"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:textAlignment="textStart"
            android:maxLines="3"
            android:textColor="@color/colorQuotesAuthor"
            android:textStyle="bold"
            android:textSize="@dimen/s25sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/s50dp"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/s50dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_word_use_link"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:textColor="@color/z"
            android:text=""
            />
        <TextView
            android:id="@+id/txt_word_use"
            style="@style/style_txt_success_dialog_title"
            android:padding="@dimen/s5dp"
            android:textAlignment="textStart"
            android:textSize="@dimen/s20sp"
            android:maxLines="2"
            android:textColor="@color/colorNormalCategory"
            android:text=" "
            />

    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/s5dp"
        >
        <Button
            android:id="@+id/btn_next_level"
            style="@style/style_imgAplabates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s170dp"
            android:background="@drawable/home_play_button"
            android:text="@string/btn_ok"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</RelativeLayout>

